--- a/analysis-complete-case/analysis-H3-app-usage-moderators.Rmd
+++ b/analysis-complete-case/analysis-H3-app-usage-moderators.Rmd
@@ -1270,3 +1270,9 @@ abline(h = 1, lty = 3, col = "red", lwd = 2)
 dev.off()
 ```
 
+```{r}
+if(file.exists("analysis-complete-case/formatted-output/H3-app-usage-moderators/Thumbs.db")){
+  file.remove("analysis-complete-case/formatted-output/H3-app-usage-moderators/Thumbs.db")
+}
+```
+
