--- a/analysis-complete-case/analysis-other-exploratory-moderators.Rmd
+++ b/analysis-complete-case/analysis-other-exploratory-moderators.Rmd
@@ -1579,7 +1579,9 @@ abline(h = 1, lty = 3, col = "red", lwd = 2)
 dev.off()
 ```
 
-
-
-
+```{r}
+if(file.exists("analysis-complete-case/formatted-output/other-exploratory-moderators/Thumbs.db")){
+  file.remove("analysis-complete-case/formatted-output/other-exploratory-moderators/Thumbs.db")
+}
+```
 
